# todo-api/openapi_server/models/task.py
@@ -1,119 +1,72 @@
-from datetime import date, datetime  # noqa: F401
+# coding: utf-8
 
-from typing import List, Dict  # noqa: F401
+from __future__ import absolute_import
+from datetime import date, datetime
+from typing import List, Dict
 
 from openapi_server.models.base_model import Model
 from openapi_server import util
 
 
 class Task(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, id=None, title=None, completed=None):  # noqa: E501
-        """Task - a model defined in OpenAPI
-
-        :param id: The id of this Task.  # noqa: E501
-        :type id: int
-        :param title: The title of this Task.  # noqa: E501
-        :type title: str
-        :param completed: The completed of this Task.  # noqa: E501
-        :type completed: bool
-        """
+    def __init__(self, id=None, title=None, completed=None, due_date=None):
         self.openapi_types = {
             'id': int,
             'title': str,
-            'completed': bool
+            'completed': bool,
+            'due_date': date
         }
 
         self.attribute_map = {
             'id': 'id',
             'title': 'title',
-            'completed': 'completed'
+            'completed': 'completed',
+            'due_date': 'due_date'
         }
 
         self._id = id
         self._title = title
         self._completed = completed
+        self._due_date = due_date
 
     @classmethod
-    def from_dict(cls, dikt) -> 'Task':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The Task of this Task.  # noqa: E501
-        :rtype: Task
-        """
+    def from_dict(cls, dikt):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def id(self) -> int:
-        """Gets the id of this Task.
-
-
-        :return: The id of this Task.
-        :rtype: int
-        """
+    def id(self):
         return self._id
 
     @id.setter
-    def id(self, id: int):
-        """Sets the id of this Task.
-
-
-        :param id: The id of this Task.
-        :type id: int
-        """
+    def id(self, id):
         if id is None:
-            raise ValueError("Invalid value for `id`, must not be `None`")  # noqa: E501
-
+            raise ValueError("Invalid value for `id`, must not be `None`")
         self._id = id
 
     @property
-    def title(self) -> str:
-        """Gets the title of this Task.
-
-
-        :return: The title of this Task.
-        :rtype: str
-        """
+    def title(self):
         return self._title
 
     @title.setter
-    def title(self, title: str):
-        """Sets the title of this Task.
-
-
-        :param title: The title of this Task.
-        :type title: str
-        """
+    def title(self, title):
         if title is None:
-            raise ValueError("Invalid value for `title`, must not be `None`")  # noqa: E501
-
+            raise ValueError("Invalid value for `title`, must not be `None`")
         self._title = title
 
     @property
-    def completed(self) -> bool:
-        """Gets the completed of this Task.
-
-
-        :return: The completed of this Task.
-        :rtype: bool
-        """
+    def completed(self):
         return self._completed
 
     @completed.setter
-    def completed(self, completed: bool):
-        """Sets the completed of this Task.
-
-
-        :param completed: The completed of this Task.
-        :type completed: bool
-        """
+    def completed(self, completed):
         if completed is None:
-            raise ValueError("Invalid value for `completed`, must not be `None`")  # noqa: E501
-
+            raise ValueError("Invalid value for `completed`, must not be `None`")
         self._completed = completed
+
+    @property
+    def due_date(self):
+        return self._due_date
+
+    @due_date.setter
+    def due_date(self, due_date):
+        self._due_date = due_date
