# todo-api/openapi_server/models/task_input.py
@@ -1,89 +1,57 @@
-from datetime import date, datetime  # noqa: F401
+# coding: utf-8
 
-from typing import List, Dict  # noqa: F401
+from __future__ import absolute_import
+from datetime import date, datetime
+from typing import List, Dict
 
 from openapi_server.models.base_model import Model
 from openapi_server import util
 
 
 class TaskInput(Model):
-    """NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, title=None, completed=None):  # noqa: E501
-        """TaskInput - a model defined in OpenAPI
-
-        :param title: The title of this TaskInput.  # noqa: E501
-        :type title: str
-        :param completed: The completed of this TaskInput.  # noqa: E501
-        :type completed: bool
-        """
+    def __init__(self, title=None, completed=None, due_date=None):
         self.openapi_types = {
             'title': str,
-            'completed': bool
+            'completed': bool,
+            'due_date': date
         }
 
         self.attribute_map = {
             'title': 'title',
-            'completed': 'completed'
+            'completed': 'completed',
+            'due_date': 'due_date'
         }
 
         self._title = title
         self._completed = completed
+        self._due_date = due_date
 
     @classmethod
-    def from_dict(cls, dikt) -> 'TaskInput':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The TaskInput of this TaskInput.  # noqa: E501
-        :rtype: TaskInput
-        """
+    def from_dict(cls, dikt):
         return util.deserialize_model(dikt, cls)
 
     @property
-    def title(self) -> str:
-        """Gets the title of this TaskInput.
-
-
-        :return: The title of this TaskInput.
-        :rtype: str
-        """
+    def title(self):
         return self._title
 
     @title.setter
-    def title(self, title: str):
-        """Sets the title of this TaskInput.
-
-
-        :param title: The title of this TaskInput.
-        :type title: str
-        """
+    def title(self, title):
         if title is None:
-            raise ValueError("Invalid value for `title`, must not be `None`")  # noqa: E501
-
+            raise ValueError("Invalid value for `title`, must not be `None`")
         self._title = title
 
     @property
-    def completed(self) -> bool:
-        """Gets the completed of this TaskInput.
-
-
-        :return: The completed of this TaskInput.
-        :rtype: bool
-        """
+    def completed(self):
         return self._completed
 
     @completed.setter
-    def completed(self, completed: bool):
-        """Sets the completed of this TaskInput.
-
-
-        :param completed: The completed of this TaskInput.
-        :type completed: bool
-        """
-
+    def completed(self, completed):
         self._completed = completed
+
+    @property
+    def due_date(self):
+        return self._due_date
+
+    @due_date.setter
+    def due_date(self, due_date):
+        self._due_date = due_date
